fixed text wrapping

--- a/noivamain/tests/to_do.css
+++ b/noivamain/tests/to_do.css
@@ -23,7 +23,7 @@ body{
     margin-bottom: 1rem;
 }
 .note-input h3{
-    color: var(--bittersweet);
+    color: #0b544e;
 }
 .note-wrapper{
     margin: 0.7rem 0;
@@ -41,7 +41,6 @@ body{
 }
 #note-content{
     resize: none;
-    overflow-wrap: break-word;
 }
 #note-title:focus,
 #note-content:focus{
@@ -74,10 +73,12 @@ body{
 }
 .note-item{
     background: #fff;
+    width: 450px;
     margin: 1rem;
     padding: 1.5rem;
     border-radius: 2px;
     box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.3);
+    overflow-wrap: break-word;
 }
 .note-item h3{
     margin-bottom: 1rem;
